tests/conformance/typecheck/invalid/await_outside_async.ks
// await outside async context should fail
fun bad(): Int = {
  val task = someAsyncFn()
  await task
}
